--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,16 @@
 
   <!-- Deploy to own hacked maven repo in github -->
   <!-- Based on the directions here: http://cemerick.com/2010/08/24/hosting-maven-repos-on-github/ -->
-  <!-- this isn't the best, but until we get into the 'real' maven repos, 
-    this is good enough. We really ought to use the release plugin and push to 
+  <!-- this isn't the best, but until we get into the 'real' maven repos,
+    this is good enough. We really ought to use the release plugin and push to
     maven, but meh... -->
-  <!-- To publish a snapshot, have a checked out version of phoenix (in a 
-    folder called 'phoenix-maven') in the same directory as phoenix. For instance... 
-    ~/dev/ phoenix/ phoenix-maven/ Then switch to the 'maven-artifacts' branch 
-    in the other checkout. Then from the root of this directory, run: $ mvn -DaltDeploymentRepository=snapshot-repo::default::file:../phoenix-maven/snapshots 
-    clean deploy -DskipTests And then, similarly, to do a release: 1. change 
-    the verion to the next version (remove the -SNAPSHOT identifier) 2. run: 
-    $ mvn -DaltDeploymentRepository=release-repo::default::file:../phoenix-maven/releases 
+  <!-- To publish a snapshot, have a checked out version of phoenix (in a
+    folder called 'phoenix-maven') in the same directory as phoenix. For instance...
+    ~/dev/ phoenix/ phoenix-maven/ Then switch to the 'maven-artifacts' branch
+    in the other checkout. Then from the root of this directory, run: $ mvn -DaltDeploymentRepository=snapshot-repo::default::file:../phoenix-maven/snapshots
+    clean deploy -DskipTests And then, similarly, to do a release: 1. change
+    the verion to the next version (remove the -SNAPSHOT identifier) 2. run:
+    $ mvn -DaltDeploymentRepository=release-repo::default::file:../phoenix-maven/releases
     clean deploy -DskipTests -->
   <distributionManagement>
     <repository>
@@ -69,7 +69,7 @@
     <test.output.tofile>true</test.output.tofile>
 
     <!-- Hadoop Versions -->
-    <hadoop-one.version>1.0.4</hadoop-one.version>
+    <hadoop-one.version>1.0.3</hadoop-one.version>
     <hadoop-two.version>2.0.4-alpha</hadoop-two.version>
 
     <!-- Dependency versions -->
@@ -123,7 +123,7 @@
             <target>1.6</target>
           </configuration>
         </plugin>
-        <!--This plugin's configuration is used to store Eclipse m2e settings 
+        <!--This plugin's configuration is used to store Eclipse m2e settings
           only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
@@ -235,7 +235,7 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
+     <!--- wtf? <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.2</version>
@@ -248,7 +248,7 @@
             </plugin>
           </reportPlugins>
         </configuration>
-      </plugin>
+      </plugin> -->
     </plugins>
   </build>
 
@@ -417,7 +417,7 @@
 
   <profiles>
 
-    <!-- Profile for building against Hadoop 1. Active by default. Not used 
+    <!-- Profile for building against Hadoop 1. Active by default. Not used
       if another Hadoop profile is specified with mvn -Dhadoop.profile=foo -->
     <profile>
       <id>hadoop-1</id>
